--- a/sample/src/main/res/layout/activity_basic.xml
+++ b/sample/src/main/res/layout/activity_basic.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".BasicActivity">
 
     <LinearLayout
@@ -21,7 +21,8 @@
             android:layout_height="match_parent"
             app:mcv_calendarMode="two_weeks"
             app:mcv_firstDayOfWeek="monday"
-            app:mcv_showOtherDates="out_of_range"/>
+            app:mcv_selectionMode="single"
+            app:mcv_showOtherDates="out_of_range" />
     </LinearLayout>
 
     <TextView
@@ -41,11 +42,11 @@
         android:text="Mode Toggle" />
 
     <Button
-        android:id="@+id/button_add_prices"
+        android:id="@+id/button_disable_days"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="16dp"
-        android:text="Add prices" />
+        android:text="Disable Days" />
 
 </LinearLayout>
